# goit-algo2-hw-10

./: README.md  main.py  pyproject.toml  schedule.py
